--- a/metadata.yaml
+++ b/metadata.yaml
@@ -48,6 +48,7 @@ subjects:
 - !lcsh 'Married people -- Drama'
 - !lcsh 'Comedies'
 - !lcc 'PR'
+- GITenberg
 title: 'La méchante femme mise à la raison
 
   Comédie'
